main page responsive

--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabrina Portifolio</title>
+    <title>Sabrina Ondas</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Ondas.</div>
+        <div class="menu">
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+        </div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="leftside">
+                <div class="info">
+                    <div class="role">Web Developer</div>
+                    <div class="name">I'm Sabrina Ondas</div>
+                    <div class="buttons">
+                        <a href="" class="dark">More About Me</a>
+                        <a href="">Hire Me</a>
+                    </div>
+                </div>
+            </div>
+            <div class="rightside"></div>
+        </div>
+    </section>
+    <footer>
+        This portifolio is made by <a href="https://github.com/arthurfsvieira">Arthur Vieira</a>
+    </footer>
 
-    
 </body>
 </html>
